--- a/css/custom.scss
+++ b/css/custom.scss
@@ -19,6 +19,11 @@ body {
     width: 100%;
     text-align: center;
     font-size: 40px;
+    &:first-child {
+      padding: 10px;
+      font-size: 8vh;
+      margin: 0;
+    }
   }
 }
 
